# memosa

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml  (+2 more)
docs/: RELEASING.md  ROADMAP.md  TASKS.md  google-calendar-setup.md
scripts/: download-phi-model.sh  refresh-installed-app.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  PrivacyInfo.xcprivacy  build.rs  entitlements-dev.plist  entitlements-devid.plist  entitlements.plist  tauri.conf.devid.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: diagnostics.rs  ffmpeg.rs  lib.rs  macos.rs  macos_helpers.m  main.rs  mic_permission.m  paths.rs  privacy.rs  screenshot.rs  types.rs
src-tauri/src/audio/: NOTES.md  ambient.rs  mixer.rs  mod.rs  permissions.rs  recorder.rs
src-tauri/src/calendar/: NOTES.md  google.rs  mod.rs  oauth.rs  providers.rs  scheduler.rs  state.rs  tokens.rs
src-tauri/src/chat/: mod.rs
src-tauri/src/diarize/: mod.rs
src-tauri/src/export/: mod.rs
src-tauri/src/export/providers/: local_stub.rs  mod.rs
src-tauri/src/import/: mod.rs
src-tauri/src/insights/: mod.rs
src-tauri/src/mcp/: mod.rs
src-tauri/src/search/: mod.rs
src-tauri/src/storage/: NOTES.md  db.rs  fs.rs  mod.rs  settings.rs
src-tauri/src/sync/: mod.rs
src-tauri/src/transcription/: NOTES.md  jobs.rs  live.rs  mod.rs  models.rs  whisper.rs
(+37 files in other folders)
