[package]
name = "memosa"
version = "1.0.1"
description = "Memosa - Record and Transcription App"
authors = ["Ben"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "memosa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "memosa"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[features]
default = ["whisper-rs"]
whisper-rs = ["dep:whisper-rs"]

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
cpal = "0.15"
hound = "3"
whisper-rs = { version = "0.11", optional = true, features = ["metal"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
keyring = "2"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled", "vtab"] }
symphonia = { version = "0.5", features = ["mp3", "aac", "isomp4", "ogg", "wav", "flac"] }
